--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+{/*
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -26,6 +27,22 @@
     transform: rotate(360deg);
   }
 }
+
+@media (prefers-reduced-motion: no-preference) {
+  a:nth-of-type(2) .logo {
+    animation: logo-spin infinite 20s linear;
+  }
+}
+
+.card {
+  padding: 2em;
+}
+
+.read-the-docs {
+  color: #888;
+}
+*/}
+
 
 @media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
